--- a/docker/full/Dockerfile
+++ b/docker/full/Dockerfile
@@ -31,9 +31,11 @@ RUN adduser --disabled-password --gecos "" jsreport && \
     apt-get install -y libgconf-2-4 && \
     wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add - && \
     sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list' && \
+    apt-get install software-properties-common && \
+    add-apt-repository -y ppa:kokoye2007/ppa && \
     apt-get update && \
     # install latest chrome just to get package deps installed
-    apt-get install -y google-chrome-stable fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst --no-install-recommends && \
+    apt-get install -y google-chrome-stable fonts-ipafont-gothic fonts-wqy-zenhei fonts-thai-tlwg fonts-kacst ttf-myanmar-fonts-unicode --no-install-recommends && \
     # then replace that chrome with specific chrome version, see https://github.com/webnicer/chrome-downloads for available versions
     wget https://github.com/webnicer/chrome-downloads/raw/master/x64.deb/google-chrome-stable_76.0.3809.132-1_amd64.deb && \
     dpkg -i ./google-chrome*.deb && \
